--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 body {
   margin: 0;
   font-family: DM Sans Regular, sans-serif;
-  background-color: bisque;
 }
 
 p {
@@ -16,4 +15,10 @@ ul {
 
 a {
   text-decoration: none;
+}
+
+img {
+  display: block;
+  width: 100%;
+  height: auto;
 }
