--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,13 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   font-family: DM Sans Regular, sans-serif;
 }
 
-h1, p {
+h1, h2, h3, h4, p {
   margin-top: 0;
 }
 
