--- a/src/index.css
+++ b/src/index.css
@@ -9,9 +9,15 @@ html {
 body {
   margin: 0;
   font-family: DM Sans Regular, sans-serif;
+  background: url('./images/hero-desktop.jpg') no-repeat;
+  background-size: contain;
 }
 
-h1, h2, h3, h4, p {
+h1,
+h2,
+h3,
+h4,
+p {
   margin-top: 0;
 }
 
@@ -23,6 +29,7 @@ ul {
 
 a {
   text-decoration: none;
+  color: inherit;
 }
 
 img {
